# caskdb-cpp

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  README.md  buffer.hpp  cask.db  main.cc  serde.hpp  store.cc  store.hpp
include/: buffer.hpp  crc32.hpp  entry.hpp  file_manager.hpp  header.hpp  helpers.hpp  index.hpp  index_mem.hpp  serde.hpp  storage.hpp  store.hpp  utils.hpp
src/: CMakeLists.txt  file_manager.cpp  main.cc  main.cpp  serde.cpp  storage.cpp
test/: main.cpp  serde_test.hpp
